[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencv-python"
version = "4.9.0.80"
description = "Dummy package for OpenCV-contrib (Titanian build)"
readme = "README.rst"
license = { text = "MIT License" }
authors = [
    { name = "Ethan Charoenpitaks", email = "echaroenpitaks@gmail.com" },
]
dependencies = [
    # "opencv-contrib-python==4.9.0.80",
]

# This module has no content of its own whatsoever, but hatch requires
# that we include something, so we'll include the README.
[tool.hatch.build]
include = ["README.rst"]
